# anaconda-anon-usage

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  setup.py
.github/workflows/: canary-test.yml  main.yml  pre-commit.yaml
anaconda_anon_usage/: _activation_bootstrap.py  _version.py  api.py  api_key.py  attribution.py  heartbeat.py  install.py  main.py  patch.py  plugin.py  tokens.py  utils.py
conda.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
rust/: Cargo.toml  README.md  build.rs
rust/src/: lib.rs  main.rs  platform.rs  tokens.rs  utils.rs
scripts/: activate.bat  activate.sh  anaconda_anon_usage_activation.pth  anaconda_anon_usage_activation.start  post-link.bat  post-link.sh  pre-unlink.bat  pre-unlink.sh
tests/: canary_versions.py  conftest.py  requirements.txt  test_config.py  test_environment.sh  test_installer.sh  test_rust_parity.py
tests/integration/: proxy_tester.py  test_config.py  test_environment.sh  test_heartbeats.py
tests/unit/: test_activation_bootstrap.py  test_attribution.py  test_patch.py  test_tokens.py  test_utils.py
