[package]
name = "anaconda-anon-usage"
version = "0.0.0"
edition = "2021"
description = "Anaconda Anonymous Usage token generation for the conda ecosystem"
license = "BSD-3-Clause"
repository = "https://github.com/anaconda/anaconda-anon-usage"
readme = "README.md"
keywords = ["telemetry", "conda", "anaconda", "anonymous"]
categories = ["development-tools"]
[features]
default = []
cli = ["tracing-subscriber"]

[[bin]]
name = "anaconda-anon-usage"
required-features = ["cli"]

[dependencies]
base64 = "0.22"
dirs = "6"
getrandom = "0.3"
mac_address = "1.1"
uuid = { version = "1.10", features = ["v4"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
